# qsmbly

./: .gitignore  README.md  build.sh  index.html  package.json
.github/workflows/: bump-qsmxt-config.yml  deploy.yml
css/: landing.css  modern-styles.css
js/: qsm-app-romeo.js  qsm-worker-pure.js  qsm-worker.js  qsm_wasm.d.ts  qsm_wasm.js  qsm_wasm_bg.wasm  qsm_wasm_bg.wasm.d.ts
js/app/: config.js  config.test.js  qsm-defaults.js
js/controllers/: DicomController.js  DicompareController.js  FileIOController.js  MaskController.js  PipelineExecutor.js  PipelineSettingsController.js  ViewerController.js  index.js
js/modules/: CommandGenerator.js  ConfigBridge.js
js/modules/file-io/: NiftiUtils.js
js/modules/mask/: MorphologyOps.js
js/modules/ui/: DicompareReportRenderer.js  LandingPage.js  index.js
js/worker/utils/: FieldMapping.js
python/: romeo_python.py
rust-wasm/: Cargo.toml  build-wasm.sh
rust-wasm/src/: fft.rs  lib.rs  nifti_io.rs  priority_queue.rs  region_grow.rs
rust-wasm/src/bet/: evolution.rs  icosphere.rs  mesh.rs  mod.rs
rust-wasm/src/bgremove/: ismv.rs  lbv.rs  mod.rs  pdf.rs  sdf.rs  sharp.rs  smv.rs  vsharp.rs
rust-wasm/src/inversion/: ilsqr.rs  medi.rs  mod.rs  nltv.rs  rts.rs  tgv.rs  tikhonov.rs  tkd.rs  tv.rs
rust-wasm/src/kernels/: dipole.rs  laplacian.rs  mod.rs  smv.rs
rust-wasm/src/solvers/: cg.rs  lsmr.rs  mod.rs
rust-wasm/src/unwrap/: laplacian.rs  mod.rs  romeo.rs
rust-wasm/src/utils/: bias_correction.rs  curvature.rs  frangi.rs  gradient.rs  mod.rs  multi_echo.rs  padding.rs  qsmart.rs  simd_ops.rs  vasculature.rs
scripts/: generate-defaults.mjs
wasm/: package.json  qsm_wasm.d.ts  qsm_wasm.js  qsm_wasm_bg.wasm.d.ts  romeo_wasm.d.ts  romeo_wasm.js  romeo_wasm_bg.wasm.d.ts
