[package]
name = "qsm_wasm"
version = "0.11.0"
edition = "2021"
authors = ["QSM-WASM"]
description = "WASM bindings for QSM processing pipeline (powered by qsm-core)"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
simd = ["qsm-core/simd"]

[dependencies]
# Core QSM algorithms
qsm-core = { git = "https://github.com/astewartau/QSM.rs", tag = "v0.10.0" }

# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
