[package]
name = "qsm_wasm"
version = "0.18.0"
edition = "2021"
authors = ["QSM-WASM"]
description = "WASM bindings for QSM processing pipeline (powered by qsm-core)"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
simd = ["qsm-core/simd"]

[dependencies]
# Core QSM algorithms
# TEMP: local paths while refactoring to the new QSM.rs API. NOTE: no `parallel`
# feature (WASM is single-threaded). Switch back to published tags once QSM.rs
# #43 and the matching qsmxt-config are merged & released.
qsm-core = { path = "/home/ashley/repos/qsm/QSM.rs" }

# Pipeline configuration, command generation, methods text
qsmxt-config = { path = "/home/ashley/repos/qsm/qsmxt/qsmxt/crates/qsmxt-config" }

# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"
serde_json = "1"
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
